--- a/www/css/by_domain/dhart/theme_colors.css
+++ b/www/css/by_domain/dhart/theme_colors.css
@@ -6,4 +6,7 @@
     --main-search-list-selected-gene: #782121;
     --main-section-launcher-bg-color-active: #782121;
     --main-section-launcher-bg-color-inactive: #BD8888;
+    --logo-bg-color: #FFFFFF;
+    --logo-width: 126px;
+    --logo-height: 128px;
 }
