--- a/www/include/by_domain/dhart/funding.html
+++ b/www/include/by_domain/dhart/funding.html
@@ -3,12 +3,12 @@
   <div class="row">
     <div class="col-sm-6">
       <a href="https://www.klinikum.uni-heidelberg.de/">
-        <img src="img/by_domain/dhart/171029Logo_UKHD_dt_positiv_RGB.png" style="max-height:70px;" title="Heidelberg University Hospital"/>
+        <img src="img/by_domain/dhart/171029Logo_UKHD_dt_positiv_RGB.png" style="max-height:100px;" title="Heidelberg University Hospital"/>
       </a>
     </div>
     <div class="col-sm-6">
       <a href="https://dzhk.de/">
-        <img src="img/by_domain/gear/dzhk.png" style="max-height:70px;" title="German Center for Cardiovascular Research"/>
+        <img src="img/by_domain/dhart/dzhk.png" style="max-height:100px;" title="German Center for Cardiovascular Research"/>
       </a>
     </div>
   </div>
