--- a/www/include/navigation_bar.html
+++ b/www/include/navigation_bar.html
@@ -33,19 +33,19 @@
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
         <a id="manual_link" href="./manual.html" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Go to manual">
-          <span class="fa fa-book"> Manual</span>
+		<span class="fa fa-book"></span><span> Manual</span>
         </a>
       </li>
       <li class="nav-item">
         <a id="comment_link" href="./contact.html" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Ask us questions or give some feedback">
-          <span class="fa fa-comment"> Contact</span>
+		<span class="fa fa-comment"></span><span> Contact</span>
           <span id="new_msg_count_c" class="badge"></span>
         </a>
       </li>
     </ul>
     <form class="form-inline">
       <div class="btn-group">
-        <button type="button" class="btn btn-secondary dropdown-toggle fa fa-user" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <button type="button" class="btn btn-secondary dropdown-toggle fa fa-user style=font-family:Muli, sans-serif" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <span id='user_logged_in' class='user_logged_in'>user</span> <span class="caret"></span>
         </button>
         <ul id='user_menu' class="dropdown-menu">
