--- a/www/css/gear-theme-purple.scss
+++ b/www/css/gear-theme-purple.scss
@@ -12,7 +12,7 @@
 
 // For gEAR site
 $gear-bg-primary: #362E5C;
-$gear-bg-secondary: #544A8E;
+$gear-bg-secondary: #782121;
 $gear-bg-tertiary: #EFEDF7;
 
 $gear-state-success: #E2FFBD;
